# InstantNews

./: .dockerignore  .env.example  .gitignore  BILLING.md  CLAUDE.md  Dockerfile  Dockerfile.prod  ESSENTIAL_FUNCTIONS_AUDIT.md  FEATURE_GATES.md  GEMINI.md  LANDING_PAGE_AUDIT.md  LOAD_TEST_REPORT.md  PAIN_POINT_DISCOVERY.md  README.md  WAVE_1_READINESS.md  alembic.ini  app.js  deploy.sh  docker-compose.override.yml  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  style.css
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-13T09-45-20-931Z.yml  page-2026-04-13T16-17-48-283Z.yml  page-2026-04-13T16-18-19-652Z.yml  page-2026-04-13T16-19-57-405Z.yml  page-2026-04-13T16-34-33-754Z.yml  page-2026-04-13T16-35-08-442Z.yml  page-2026-04-13T16-36-08-855Z.yml  page-2026-04-13T23-33-09-017Z.yml  page-2026-04-13T23-34-50-881Z.yml  page-2026-04-13T23-35-33-452Z.yml  page-2026-04-14T00-07-35-666Z.yml  page-2026-04-14T00-09-20-111Z.yml  page-2026-04-14T00-10-45-016Z.yml  page-2026-04-14T00-11-13-418Z.yml  page-2026-04-14T00-12-42-415Z.yml  page-2026-04-14T00-14-06-397Z.yml  page-2026-04-14T00-16-09-399Z.yml  page-2026-04-14T00-29-18-255Z.yml  page-2026-04-14T00-33-06-281Z.yml  page-2026-04-14T00-33-21-274Z.yml  page-2026-04-15T10-45-06-988Z.yml  page-2026-04-15T10-47-46-967Z.yml  page-2026-04-15T10-50-37-567Z.yml  page-2026-04-15T11-00-31-128Z.yml  page-2026-04-15T11-02-32-347Z.yml  page-2026-04-15T11-06-24-812Z.yml  page-2026-04-15T11-09-52-487Z.yml  page-2026-04-15T11-10-43-420Z.yml  page-2026-04-15T11-13-03-133Z.yml  (+84 more)
(+546 files in other folders)
