[project]
name = "instantnews"
version = "1.0.0"
description = "SIGNAL — Real-time financial news aggregation terminal"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers -v"
markers = [
    "integration: end-to-end test requiring a live Postgres/Redis (gated on INTEGRATION_TEST=1)",
]

[tool.mypy]
ignore_missing_imports = true
